--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   process:
     runs-on: ubuntu-latest
+    # Le job ne s'exécute que si l'enregistrement a réussi ou si on le lance manuellement
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
@@ -24,6 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install faster-whisper
 
       - name: Run ATIS Pipeline (IA + HTML)
@@ -36,6 +38,6 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add index.html
-          # On ne commit que s'il y a un changement pour éviter les erreurs
-          git commit -m "Update ATIS Dashboard: $(date -u +'%H:%M') UTC" || exit 0
+          # On commit seulement s'il y a des changements pour éviter de faire échouer le workflow
+          git commit -m "Update ATIS Dashboard: $(date -u +'%Y-%m-%d %H:%M') UTC" || exit 0
           git push
