--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -1,139 +1,38 @@
-import os
-import re
-import datetime
-from faster_whisper import WhisperModel
+name: Process ATIS
 
-# --- SÉCURITÉ : IMPORT DU DICTIONNAIRE ---
-try:
-    from dictionary import CORRECTIONS
-except ImportError:
-    print("ATTENTION : dictionary.py non trouvé. Utilisation d'un dictionnaire vide.")
-    CORRECTIONS = {}
+on:
+  push:
+    paths:
+      - 'atis_recorded.wav'
+  workflow_dispatch:
 
-# --- CONFIGURATION IA ---
-# Utilisation de "medium.en" pour un bon compromis vitesse/précision
-model = WhisperModel("medium.en", device="cpu", compute_type="int8")
+jobs:
+  process:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-def run_atis_system():
-    # 1. VÉRIFICATION DE L'AUDIO
-    audio_file = "atis_recorded.wav"
-    if not os.path.exists(audio_file):
-        print(f"ERREUR : {audio_file} introuvable à la racine du dépôt.")
-        return
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip'
 
-    # 2. TRANSCRIPTION
-    print("Transcription en cours...")
-    prompt = "Tallinn Airport ATIS, Information, Runway 08, QNH 1021, CAVOK, NOSIG, frost, wet, bird activity."
-    segments, _ = model.transcribe(audio_file, beam_size=5, initial_prompt=prompt)
-    raw_text = " ".join([s.text for s in segments]).upper()
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install faster-whisper
 
-    # 3. NETTOYAGE VIA DICTIONNAIRE
-    clean_text = raw_text
-    for wrong, right in CORRECTIONS.items():
-        # \b assure qu'on ne remplace que des mots entiers
-        clean_text = re.sub(rf'\b{wrong}\b', right, clean_text)
-    
-    # Nettoyage technique des caractères
-    clean_text = clean_text.replace(",", " ").replace(".", " ")
-    clean_text = " ".join(clean_text.split())
+      - name: Run ATIS Pipeline (main.py)
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: python main.py
 
-    # 4. EXTRACTION DES DONNÉES
-    data = {
-        "info": "-", "rwy": "--", "qnh": "----", "wind": "--- / --KT",
-        "vis": "---", "td": "-- / --", "rcc": "-/-/-", "surf": "UNKNOWN"
-    }
-
-    # Info Letter
-    m_i = re.search(r"INFORMATION,?\s+([A-Z])", clean_text)
-    if m_i: data["info"] = m_i.group(1)
-
-    # QNH
-    m_q = re.search(r"QNH\s*(\d{4})", clean_text)
-    if m_q: data["qnh"] = m_q.group(1)
-
-    # Runway
-    m_r = re.search(r"RUNWAY\s*(\d{2})", clean_text)
-    if m_r: data["rwy"] = m_r.group(1)
-
-    # Wind (XXX DEGREES XX KNOTS)
-    m_w = re.search(r"(\d{3}),?\s*DEGREES,?\s*(\d+)\s*KNOTS", clean_text)
-    if m_w: data["wind"] = f"{m_w.group(1)}° / {m_w.group(2).zfill(2)}KT"
-
-    # Visibility
-    if "CAVOK" in clean_text:
-        data["vis"] = "CAVOK"
-    else:
-        m_v = re.search(r"VISIBILITY.*?(\d+)\s*(?:KM|M)?", clean_text)
-        if m_v: data["vis"] = m_v.group(1) + (" KM" if "KM" in clean_text else " M")
-
-    # Temperature / Dewpoint
-    def get_temp(anchor):
-        parts = clean_text.split(anchor)
-        if len(parts) > 1:
-            m = re.search(r"(MINUS\s+)?(\d+)", parts[1])
-            if m: return ("-" if m.group(1) else "") + m.group(2)
-        return "--"
-    data["td"] = f"{get_temp('TEMPERATURE')}° / {get_temp('DEWPOINT')}°"
-
-    # RCC (Runway Condition Code)
-    r1 = re.search(r"TOUCHDOWN\s*(\d)", clean_text)
-    r2 = re.search(r"MIDPOINT\s*(\d)", clean_text)
-    r3 = re.search(r"STOP END\s*(\d)", clean_text)
-    if r1: data["rcc"] = f"{r1.group(1)}/{r2.group(1) if r2 else r1.group(1)}/{r3.group(1) if r3 else r1.group(1)}"
-
-    # Contamination
-    states = [s for s in ["WET", "DRY", "WATER", "ICE", "SNOW", "SLUSH", "FROST"] if s in clean_text]
-    if states: data["surf"] = "/".join((states * 3)[:3])
-
-    # 5. GÉNÉRATION DU HTML (Design Gris Anthracite & Blanc)
-    now = datetime.datetime.now().strftime("%H:%M")
-    html = f'''
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EETN ATIS MONITOR</title>
-        <style>
-            :root {{ --bg: #0f0f0f; --card: #1a1a1a; --white: #ffffff; --dim: #666; }}
-            body {{ font-family: 'Inter', sans-serif; background: var(--bg); color: var(--white); margin: 0; padding: 15px; display: flex; flex-direction: column; align-items: center; text-transform: uppercase; }}
-            .container {{ width: 100%; max-width: 480px; }}
-            .header {{ display: flex; justify-content: space-between; font-size: 0.7rem; color: var(--dim); margin-bottom: 20px; font-weight: bold; letter-spacing: 1px; }}
-            .grid {{ display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 15px; }}
-            .card {{ background: var(--card); padding: 20px 5px; border-radius: 12px; text-align: center; border: 1px solid #222; }}
-            .label {{ font-size: 0.6rem; color: var(--dim); margin-bottom: 6px; display: block; letter-spacing: 1px; }}
-            .value {{ font-size: 1.7rem; font-weight: 900; }}
-            .sec {{ background: var(--card); border-radius: 12px; padding: 5px 20px; margin-bottom: 10px; border: 1px solid #222; }}
-            .row {{ display: flex; justify-content: space-between; padding: 14px 0; border-bottom: 1px solid #252525; }}
-            .row:last-child {{ border: none; }}
-            .row span:first-child {{ color: var(--dim); font-size: 0.75rem; font-weight: bold; }}
-            .raw {{ font-size: 0.65rem; color: #2a2a2a; margin-top: 30px; text-transform: none; text-align: justify; line-height: 1.4; }}
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <div class="header"><span>TALLINN EETN ATIS</span><span>{now} UTC</span></div>
-            <div class="grid">
-                <div class="card"><span class="label">INFO</span><span class="value">{data['info']}</span></div>
-                <div class="card"><span class="label">RWY</span><span class="value">{data['rwy']}</span></div>
-                <div class="card"><span class="label">QNH</span><span class="value">{data['qnh']}</span></div>
-            </div>
-            <div class="sec">
-                <div class="row"><span>WIND</span><span>{data['wind']}</span></div>
-                <div class="row"><span>VISIBILITY</span><span>{data['vis']}</span></div>
-                <div class="row"><span>TEMP / DEW</span><span>{data['td']}</span></div>
-            </div>
-            <div class="sec">
-                <div class="row"><span>RWY CONDITION (RCC)</span><span>{data['rcc']}</span></div>
-                <div class="row"><span>SURFACE</span><span>{data['surf']}</span></div>
-            </div>
-            <div class="raw">ANALYZED: {clean_text}</div>
-        </div>
-    </body>
-    </html>
-    '''
-    with open("index.html", "w", encoding="utf-8") as f:
-        f.write(html)
-    print("Dashboard index.html mis à jour avec succès.")
-
-if __name__ == "__main__":
-    run_atis_system()
+      - name: Commit and Push changes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add index.html
+          git commit -m "Update ATIS Dashboard: $(date -u +'%H:%M') UTC" || exit 0
+          git push
