--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   process:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Force l'autorisation d'écriture
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -34,5 +37,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add index.html
-          git commit -m "Update ATIS Dashboard: $(date -u +'%H:%M') UTC" || exit 0
+          git commit -m "Update ATIS Dashboard: $(date -u +'%Y-%m-%d %H:%M') UTC" || exit 0
           git push
