--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    # On ne lance le process que si le record a réussi
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
@@ -27,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install faster-whisper
 
       - name: Run ATIS Pipeline (main.py)
