--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -39,5 +39,6 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add index.html
+          # On ajoute "exit 0" pour que le workflow reste au vert même s'il n'y a rien à commit
           git commit -m "Update ATIS Dashboard: $(date -u +'%Y-%m-%d %H:%M') UTC" || exit 0
           git push
