--- a/.github/workflows/Process ATIS.yml
+++ b/.github/workflows/Process ATIS.yml
@@ -22,12 +22,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          cache: 'pip'
 
-      - name: Install dependencies
+      - name: Install Faster Whisper
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install faster-whisper
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir faster-whisper
 
       - name: Run ATIS Pipeline (main.py)
         env:
@@ -39,6 +38,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add index.html
-          # On ajoute "exit 0" pour que le workflow reste au vert même s'il n'y a rien à commit
           git commit -m "Update ATIS Dashboard: $(date -u +'%Y-%m-%d %H:%M') UTC" || exit 0
           git push
